--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,12 +1,36 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-04-27 14:30:38 -0400 
+%% Created for Sean Bittner at 2021-04-27 20:30:06 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{hengl2007data,
+	author = {Hengl, Stefan and Kreutz, Clemens and Timmer, Jens and Maiwald, Thomas},
+	date-added = {2021-04-27 20:30:04 -0400},
+	date-modified = {2021-04-27 20:30:04 -0400},
+	journal = {Bioinformatics},
+	number = {19},
+	pages = {2612--2618},
+	publisher = {Oxford University Press},
+	title = {Data-based identifiability analysis of non-linear dynamical models},
+	volume = {23},
+	year = {2007}}
+
+@article{calderhead2011statistical,
+	author = {Calderhead, Ben and Girolami, Mark},
+	date-added = {2021-04-27 20:17:34 -0400},
+	date-modified = {2021-04-27 20:17:34 -0400},
+	journal = {Interface focus},
+	number = {6},
+	pages = {821--835},
+	publisher = {The Royal Society},
+	title = {Statistical analysis of nonlinear dynamical systems using differential geometric sampling methods},
+	volume = {1},
+	year = {2011}}
 
 @article{olypher2007using,
 	author = {Olypher, Andrey V and Calabrese, Ronald L},
