--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-04-27 20:30:06 -0400 
+%% Created for Sean Bittner at 2021-05-05 14:24:33 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -1598,13 +1598,14 @@
 	title = {Universality of fully connected recurrent neural networks},
 	year = {1993}}
 
-@article{duan2018collicular,
+@article{duan2019collicular,
 	author = {Duan, Chunyu A and Pagan, Marino and Piet, Alex T and Kopec, Charles D and Akrami, Athena and Riordan, Alexander J and Erlich, Jeffrey C and Brody, Carlos D},
+	date-modified = {2021-05-05 14:24:33 -0400},
 	journal = {bioRxiv},
 	pages = {245613},
 	publisher = {Cold Spring Harbor Laboratory},
 	title = {Collicular circuits for flexible sensorimotor routing},
-	year = {2018}}
+	year = {2019}}
 
 @article{sompolinsky1988chaos,
 	author = {Sompolinsky, Haim and Crisanti, Andrea and Sommers, Hans-Jurgen},
