--- a/written/eLifeRevision/Response.tex
+++ b/written/eLifeRevision/Response.tex
@@ -48,14 +48,14 @@
 
 \textbf{Reviewers were broadly enthusiastic about the potential usefulness of this methodology. However, the reviews and ensuing discussion revealed several points of concern about the manuscript and the approach. The full reviewer comments are included below.} 
 
-We thank the reviewers for the excellent and constructive feedback.  These valid criticisms of the original manuscript impressed upon us the importance of making key improvements to this research project.  We spent more than half of a year advancing this work according to the reviewer requests and suggestions, and we are excited to present them to you in a dramatically improved revision.
+We thank the reviewers for the excellent and constructive feedback.
 
-We have made significant changes to our writing and explanation of emergent property inference (EPI), done extensive comparisons of EPI to other parameter inference methods, and have seriously increased the quality and depth of our scientific analyses, which now yield strong theoretical results.  Our model analyses now focus on analyzing the rich structure of parameter distributions, which the deep probability distributions of EPI make possible.  Here, we provide a list of key manuscript updates, and below we explain how these changes address each of the reviewer’s concerns.
+We have made significant changes to our writing and explanation of emergent property inference (EPI), done extensive comparisons of EPI to other parameter inference methods, and have seriously increased the quality and depth of our scientific analyses, which now yield strong theoretical results.  Our model analyses now focus on analyzing the structure of parameter distributions, which EPI captures using flexible approximations enabled by deep learning.  Here, we provide a list of key manuscript updates, and below we explain how these changes address each of the reviewer’s concerns.
 
 List of key manuscript improvements:
 \begin{itemize}
-\item We completely overhauled our presentation of the parameter inference technique emergent property inference (EPI). See response to main concern \#1.
-\item We added an entirely new results section to compare EPI to alternative parameter inference techniques (SMC-ABC and SNPE) as parameter count increases, which demonstrates the advantages of EPI in high dimensional parameter spaces. See response to main concern \#2.
+\item We completely overhauled our presentation of the parameter inference technique emergent property inference (EPI). See response to main concern \#1, especially noted by R1 and R3.
+\item We added an entirely new results section to compare EPI to alternative parameter inference techniques (SMC-ABC and SNPE) as parameter count increases, which demonstrates the advantages of EPI in high dimensional parameter spaces. See response to main concern \#2, especially noted by R2 and R3.
 \item EPI is used to understand how noise across neuron type populations governs excitatory variability in a model of primary visual cortex.  
 Here, EPI yields visually striking, novel insight where the conventional analytic approach became infeasible with increasing neuron types.  See response to main concern \#4.
 \item EPI is used to discover multiple parametric regimes of rapid task switching in a model of superior colliculus.  
@@ -66,43 +66,44 @@ These regimes are efficiently identified and mechanistically characterized using
 
 \textbf{1. The methodology is not adequately explained. Both the body text and methods section present a somewhat selective description that is very hard to follow in places and should be checked and rewritten for clarity, completeness, notational consistency and correctness.}
 
-We thank the reviewers for pointing out that our explanation of the method was too narrowly focused and hard to follow. 
+Agreed.
 In the introduction, we present our method by focusing on the key aspect of EPI that differentiates it from other approaches to inverse problems.
 Specifically, we explain how current methodology infers the parameters producing computation by conditioning on \textit{exemplar datasets} (real or simulated), whereas in EPI we condition directly on the \textit{emergent properties} that define the computation.
 
 \begin{displayquote}
-Lines 45-56\\
-``\quoting{intro_data_ep}"
+Lines 46-54\\
+``\quoting{intro_data_ep}''
 \end{displayquote}
 
 We now frame the method within the more general context of parameter inference techniques in neuroscience, rather than the context of recent advancements in machine learning.
 We have made concentrated efforts to simplify language and to relate to all relevant existing methodology.
 
 \begin{displayquote}
-Lines 57-67\\
-``\quoting{intro_epi}"
+Lines 55-65\\
+``\quoting{intro_epi}''
 \end{displayquote}
 
-In Section \ref{results_dgm} and \ref{methods_EPI}, we precisely explain the details of EPI, and in Section \ref{methods_AL_opt} we show how it is optimized.
-To improve clarity, we have changed the notation and presentation of emergent properties.
+To improve clarity, we have overhauled the notation and presentation of emergent properties.
 Emergent properties are now denoted with $\mathcal{X}$ to signify an implicit dataset predicated by the emergent property.
-And rather than a vector of first- and second-moment constraints, we present the emergent property more readably as mean and variance constraints on emergent property statistics:
+And rather than a vector of first- and second-moment constraints, we present the emergent property more readably (and equivalently) as mean and variance constraints on emergent property statistics:
 
 \begin{displayquote}
-Line 705 \\
+Line 759 \\
 ``
 \begin{equation} \tag{11}
 \mathcal{X}: \mathbb{E}_{\mathbf{z},\mathbf{x}}\left[f(\mathbf{x}; \mathbf{z})\right] = \bm{\mu}, \text{Var}_{\mathbf{z},\mathbf{x}}\left[f(\mathbf{x}; \mathbf{z})\right] = \bm{\sigma}^2.
-\end{equation}"
+\end{equation}''
 \end{displayquote}
+
+Emergent properties and EPI are introduced and explained with this revised formalism in Section \ref{results_dgm}, and we have completely redone the Methods Section \ref{methods_EPI} to improve clarity, precisely explain EPI optimization (Section \ref{methods_AL_opt}), and derive equivalence to established bayesian inference techniques (Section \ref{methods_VI}).
 
 In our revised writing, we deemphasize the role of maximum entropy in the EPI algorithm, because this has largely served as a distraction in our experience.
 We show in Section \ref{methods_VI} that EPI is a special case of variational inference, since maximum entropy is the same normative selection principle as variational bayesian methods.  
 Therefore, it makes sense to present EPI in the main text as a statistical inference technique that constrains the predictions of the inferred parameters to be an emergent property, and leave the details of the maximum entropy to the technically proficient in Section \ref{methods_EPI}.
 
 \begin{displayquote}
-Lines 152-154\\
-``\quoting{results_ME}"
+Lines 156-158\\
+``\quoting{results_ME}''
 \end{displayquote}
 
 Figure \ref{fig:STG} has been largely redone to reflect the modified presentation, and improve the pictorial representation of the method.
@@ -111,8 +112,8 @@ In Section \ref{methods_RNN}, we now show that EPI is the only simulation-based 
 Finally, we emphasize the utility of this deep inference technique for scientific inquiry in a new paragraph at the end of Section \ref{results_dgm}.
 
 \begin{displayquote}
-Lines 159-174\\
-``\quoting{results_hess}"
+Lines 163-179\\
+``\quoting{results_hess}''
 \end{displayquote}
 
 \textbf{2. The computational resources required to use this method are not adequately benchmarked. For example, the cosubmission (Macke et al) reported wall clock time, required hardware and iterations required to produce results by directly comparing to existing methods (approximate bayesian computation, naive sampling, etc.) Without transparent benchmarks it is not possible to assess the advance offered by this method.} 
@@ -131,25 +132,25 @@ However, these relative drawbacks of EPI with respect to SNPE can be considered 
 
 Unlike SNPE, EPI leverages gradients of the emergent property throughout optimization, which may lead to better efficiency and scalability (Section 3.3).  
 The emergent properties of many models in neuroscience are tractably differentiable, four of which we analyze in this manuscript ranging across levels of biological realism, network size, and computational function.
-This trade-off is explained at the end of Section 3.3:
+This trade-off is now explained in the Discussion (Section \ref{discussion}).
 
 \begin{displayquote}
-Lines 240-251\\
-``\quoting{rnn_gradients}"
+Lines 439-451\\
+``\quoting{discussion_gradients}''
 \end{displayquote}
 
 Furthermore, EPI focuses the entire expressivity of the approximating deep probability distribution on a single distribution, rather than spreading this expressivity to some uncharacterized degree across the chosen training distribution of amortized posteriors in SNPE (Section 5.1.1 Related Approaches).
 
 \begin{displayquote}
-Lines 788-793\\
-``\quoting{amortization}"
+Lines 828-833\\
+``\quoting{amortization}''
 \end{displayquote}
  
 Finally, we emphasize that EPI does something fundamental that SNPE and other inference techniques cannot.  EPI learns parameter distributions whose predictions are constrained to produce the emergent property.  We show in Figure 2 and Supplementary Figure RNN2 that SNPE does not control the statistical properties of its predictions, resulting in the inference of many parameters that are not consistent with the desired emergent property.
 
 \begin{displayquote}
-Lines 229-236\\
-``\quoting{rnn_constrained}"
+Lines 232-242\\
+``\quoting{rnn_constrained}''
 \end{displayquote}
 
 \textbf{4. Some examples lack depth in their treatment (see reviewer comments) and in some cases the presentation is somewhat misleading. The STG example is not in fact a model of the STG. The cosubmission (Macke) uses a model close to the original Prinz et al model, which is a model of the pyloric subnetwork. It would be instructive to benchmark against this same model, including computation time/resources required. Secondly, the subsequent example (input-responsivity in a nonlinear sensory system) appeared to imply that EPI permits 'generation' and testing of hypotheses in a way that other methods do not. All the method really does is estimate a joint distribution of feasible parameters in a specific model which is manually inspected to propose hypotheses. Any other method (including brute force sampling) could be used in a similar way, so any claim that this is an integral advantage of EPI would be spurious. Indeed, one reviewer was confused about the origin of these hypotheses. While it is helpful to illustrate how EPI (and other methods) could be used, the writing needs to be far clearer in general and should clarify that EPI does not offer any new specific means of generating or evaluating hypotheses.}
@@ -163,18 +164,18 @@ analyses are made possible by EPI.
 \item  In the revised manuscript we clarify that novel theoretical insights are not being made into the STG subcircuit model or the recurrent neural network models.  The STG subcircuit serves as a motivational example to explain how EPI works, and we use RNNs exhibiting stable amplification as a substrate for scalability analyses.  
 
 \begin{displayquote}
-Lines 69-74 \\
-``\quoting{intro_results1}"
+Lines 77-81 \\
+``\quoting{intro_results1}''
 \end{displayquote}
 
 We do produce strong theoretical insights into a model of primary visual cortex (Section 3.4) and superior colliculus (Section 3.5).  These analyses have substantially more depth than the previous manuscript.
 
 \begin{displayquote}
-Lines 74-81 \\
-``\quoting{intro_results2}"
+Lines 81-89 \\
+``\quoting{intro_results2}''
 \end{displayquote}
 
-\item The ability to infer a flexible approximation to a probability distribution constrained to produce an emergent property is novel in its own right (Figure 2).  The deep probability distribution fit by EPI facilitates the mode identification (via gradient ascent of the parameter log probability) and sensitivity measurement (via the measurement of the eigenvector of the Hessian at a parameter value). These mode identifications and sensitivity measurements are done in Sections 3.1 (Fig. 1E), 3.4 (Fig. 3E), and 3.5 (Fig. 4C).  By using this mode identification technique along the ridges of high parameter probability in the SC model, we identify the parameters transitioning between the two regimes.  Finally, the sensitivity dimensions of the SC model identified by EPI facilitated regime characterization through perturbation analyses (Fig. 4D, Fig. 5C).
+\item The ability to infer a flexible approximation to a probability distribution constrained to produce an emergent property is novel in its own right (Figure 2).  The deep probability distribution fit by EPI facilitates the mode identification (via gradient ascent of the parameter log probability) and sensitivity measurement (via the measurement of the eigenvector of the Hessian at a parameter value). These mode identifications and sensitivity measurements are done in Sections 3.1 (Fig. 1E), 3.4 (Fig. 3E), and 3.5 (Fig. 4C).  By using this mode identification technique along the ridges of high parameter probability in the SC model, we identify the parameters transitioning between the two regimes.  Finally, the sensitivity dimensions of the SC model identified by EPI facilitated regime characterization through perturbation analyses (Fig. 4D).
  
 \end{enumerate}
 
@@ -182,29 +183,30 @@ Importantly, we do not claim that these theoretical insights were necessarily de
 One could have come to these conclusions via various combinations of techniques mentioned in Section 5.1.1 Related Methods.
 In the case of the V1 model inference, the main point is to indicate that such insight can be afforded by EPI and its related methods, in contrast to the analytic derivations emblematic of practice in theoretical neuroscience.
 \begin{displayquote}
-Lines 302-310 \\
-``\quoting{v1_summary}"
+Lines 301-309 \\
+``\quoting{v1_summary}''
 \end{displayquote}
 In the case of the SC model inference, random sampling would have taken prohibitively long, and it is unclear how the continuum between the two connectivity regimes would have been identified with alternative techniques:
 \begin{displayquote}
-Lines 414-419 \\
-``\quoting{sc_summary}"
+Lines 416-419 \\
+``\quoting{sc_summary}''
 \end{displayquote}
  
 As the reviewers indicate, the STG model analyzed in our manuscript is not that of Prinz et al. 2004, and thus not the model analyzed by the cosubmission.  We found the Prinz et al. model prohibitive to infer with EPI, since the gradients of spiking frequency from its simulation are quite computationally intensive.  However, we found it critical to show that it’s very possible to do inference in such biophysically realistic Morris-Lecar models when gradients are tractable, which is the case of the 5-neuron STG model we analyzed from Gutierrez et al. 2013.  This 5-neuron model represents the IC neuron (hub) and its coupling to the pyloric (fast) or gastric mill (slow) subcircuit rhythms.  In the introductory text, we refer to this model as the “STG subcircuit” model (rather than “STG model”), and we better clarify what aspect of the STG is being modeled in Results Section 3.1. 
 
 \begin{displayquote}
-Lines 92-97 \\
-``\quoting{stg_subcircuit}"
+Lines 100-105 \\
+``\quoting{stg_subcircuit}''
 \end{displayquote}
 
-The difference between this model and the STG model of the pyloric subnetwork is emphasized in Section \ref{results_RNN}:
+The difference between this model and the STG model of the pyloric subnetwork is emphasized in Discussion:
 
 % Within another quote so need to copy.
 \begin{displayquote}
-Lines 246-250 \\
+Lines 444-447 \\
 ``However, conditioning on the pyloric rhythm \cite{marder1992dynamic} in a model of the pyloric subnetwork model \cite{prinz2004similar} proved to be prohibitive with EPI.
-The pyloric subnetwork requires many time steps for simulation and many key emergent property statistics (e.g. burst duration and phase gap) are not calculable or easily approximated with differentiable functions."
+The pyloric subnetwork requires many time steps for simulation and many key emergent property statistics (e.g. burst duration and phase gap) are not calculable or easily approximated with differentiable functions.\\
+''
 \end{displayquote}
 
 \textbf{5. There is a substantial literature on parameter sensitivity analysis and inference in systems biology, applied dynamical systems and control that has been neglected in this manuscript. The manuscript needs to acknowledge, draw parallels and explain distinctions from current methods (ABC, profile likelihood, deep learning approaches, gaussian processes, etc). The under-referencing of this literature deepened concerns about whether this approach represented an advance. DOIs for a small subset of potentially relevant papers include:}
@@ -224,8 +226,8 @@ Thank you for pointing us to these references on sensitivity analyses and applie
 We have incorporated many of them into the current manuscript and explain EPI’s relation to each class of techniques in Section 5.1.1 Related approaches.
 
 \begin{displayquote}
-Lines 809-822 \\
-``\quoting{structural_id}"
+Lines 849-862 \\
+``\quoting{structural_id}''
 \end{displayquote}
 
 \textbf{6. One of the reviewers expressed concern that the work might have had significant input from a senior colleague during its early stages, and that that it might be worth discussing with the senior colleague whether their contribution was worthy of authorship. The authors may take this concern into account in revising the manuscript.}
@@ -252,8 +254,8 @@ Their solution is necessary for the scientific evaluation of mathematical repres
 We clarify this point in the introduction:
 
 \begin{displayquote}
-Lines 28-36 \\
-``\quoting{intro_first}"
+Lines 28-37 \\
+``\quoting{intro_first}''
 \end{displayquote}
 
 \textbf{Other concerns: }
@@ -263,8 +265,8 @@ Lines 28-36 \\
 The reviewer is correct to point out that maximum entropy solutions are not reparameterization invariant, and indeed the units matter.  The reviewer’s suggestion that the method is in some sense using a flat prior is also correct.  To clarify, EPI does not execute posterior inference, because there is no explicit dataset or specified prior belief in the EPI framework.  However, we derive the relation of EPI to bayesian inference in Section 5.1.6, which shows EPI uses a uniform prior when framed as variational inference.
 
 \begin{displayquote}
-Lines 986-989 \\
-``\quoting{ME_prior}"
+Lines 1026-1029 \\
+``\quoting{ME_prior}''
 \end{displayquote}
  
 In our examples, we only infer distributions of parameters with the same units, so this issue should not draw concern over the validity of our model analyses.  As suggested, the EPI solution will differ according to relative scaling of parameter values under the maximum entropy selection principle. Thus, an important clarification is that sensitivity quantifications are made in the context of the chosen parameter scalings. 
@@ -282,8 +284,8 @@ We appreciate this feedback.  We have adapted the introduction to clarify that w
 We clarify in point 4 above that we are not claiming to produce novel, appreciable scientific insight about the STG subcircuit model, which is used as a motivation example. The takeaway is that the conductance parameters producing intermediate hub frequency belong to a complex 2-D distribution, which EPI captures accurately, and that EPI can tell us the parameter changes away from the prototypical configuration that change hub frequency the most or least.  For example, for increases in $g_{\text{el}}$ and $g_{\text{synA}}$ according to the proportions of the degenerate dimension of parameter space, intermediate hub neuron frequency will be preserved in this model.  This suggests that in the real STG neural circuit, the IC neuron will remain at an intermediate frequency between the pyloric and gastric mill rhythms if parameter changes are made along such a dimension.
 
 \begin{displayquote}
-Lines 171 -173 \\
-``This suggests that changes in conductance along the parameter combination described by $\mathbf{v}_2$ will most preserve hub neuron firing between the intrinsic rates of the pyloric and gastric mill rhythms."
+Lines 175 -177 \\
+``The directionality of $\mathbf{v}_2$ suggests that changes in conductance along this parameter combination will most preserve hub neuron firing between the intrinsic rates of the pyloric and gastric mill rhythms.''
 \end{displayquote}
  
 \textbf{(4) I don't follow the other examples. Ideally more details should be given so that readers like myself who don't already know these systems can understand what's been done. }
@@ -340,23 +342,23 @@ Even in high dimensions, trained deep probability distributions offer tractable 
 In the current manuscript, we make sure to explain all choices of the emergent property constraints  Here, we show the description of each emergent property with equations omitted.
 
 \begin{displayquote}
-Section \ref{results_dgm}, Lines 136-140\\
-``\quoting{stg_ep_text1}~\quoting{stg_ep_text2}."
+Section \ref{results_dgm}, Lines 139-143\\
+``\quoting{stg_ep_text1}~\quoting{stg_ep_text2}.''
 \end{displayquote}
 
 \begin{displayquote}
-Section \ref{results_RNN}, Lines 200-207\\
-``\quoting{rnn_ep_text1}~... \quoting{rnn_ep_text2}~\quoting{rnn_ep_text3}"
+Section \ref{results_RNN}, Lines 204-210\\
+``\quoting{rnn_ep_text1}~... \quoting{rnn_ep_text2}~\quoting{rnn_ep_text3}''
 \end{displayquote}
 
 \begin{displayquote}
-Section \ref{results_V1}, Lines 281-284\\
-``\quoting{v1_ep_text1}~\quoting{v1_ep_text2}"
+Section \ref{results_V1}, Lines 280-283\\
+``\quoting{v1_ep_text1}~\quoting{v1_ep_text2}''
 \end{displayquote}
 
 \begin{displayquote}
-Section \ref{results_SC}, Lines 336-339\\
-``\quoting{sc_ep_text1}.~\quoting{sc_ep_text2}"
+Section \ref{results_SC}, Lines 338-341\\
+``\quoting{sc_ep_text1}.~\quoting{sc_ep_text2}''
 \end{displayquote}
 \textbf{Minor points }
 
@@ -398,24 +400,25 @@ Finally, the underlying maximum entropy flow network (MEFN) algorithm is compare
 
 The reviewer is right to point out the importance of a scaling analysis. Please see response to Main concern \#2.
 
-\textbf{3) For the STG-like example, this was done for a very simple model that was motivated by the STG but isn't based on experimental recordings. Most of the brute force models of the STG seek to fit various waveform properties of neurons and relative phases. Could the model handle these types of analyses, or would it run into problems due to either needing to specify too many properties or because properties like "number of spikes per burst" are discrete rather than continuous? This isn't fatal, but would be good to consider and/or note explicitly. }
+\textbf{3) For the STG-like example, this was done for a very simple model that was motivated by the STG but isn't based on experimental recordings. Most of the brute force models of the STG seek to fit various waveform properties of neurons and relative phases. Could the model handle these types of analyses, or would it run into problems due to either needing to specify too many properties or because properties like "number of spikes per burst'' are discrete rather than continuous? This isn't fatal, but would be good to consider and/or note explicitly. }
 
 The STG subcircuit model of Gutierrez et al. 2013 is certainly less complex than other models of the STG, yet 5 connected Morris-Lecar neurons is certainly a nontrivial system.
-We clarify why this model is analyzed in Section \ref{results_motivating} instead of more complex STG models when discussing the differences between EPI and SNPE:
+We clarify why this model is analyzed in Section \ref{results_motivating} instead of more complex STG models when discussing the differences between EPI and SNPE in Discussion:
 
 \begin{displayquote}
-Lines 240-251\\
-``\quoting{rnn_gradients}"
+Lines 439-451\\
+``\quoting{discussion_gradients}''
+
 \end{displayquote}
 
 \textbf{4) The discussion should be expanded to be more specific about what problems the authors think the model is, or is not, appropriate for. Comparisons to the Goncalves article would also be helpful since users will want to know the comparative advantages/disadvantages of each method. (if the authors could coordinate running their methods on a common illustrative example, that would be cool, but not required). }
 
 Thank you for this recommendation.
-We now include a substantial text in discussion devoted to this topic.
+We now include substantial text in discussion devoted to this topic in addition to that quoted in the previous response (R3 concern \#3).
 
 \begin{displayquote}
-Lines 431-454\\
-``\quoting{discussion}"
+Lines 431-438\\
+``\quoting{discussion_methods}''
 \end{displayquote}
 
 \textbf{5) Given that the paper is heavily a (very valuable!) methods paper for a general audience, the method should be better explained both in the main text and the supplement. Some specific ones are below, but the authors should more generally send the paper to naïve readers to check what is/is not well explained. 
@@ -443,10 +446,12 @@ We have removed the variable $\omega$ as it was unnecessary, and avoided introdu
 
 \textbf{3) Some references for other approaches and work that might be worth listing for scholarship: Sloppy models and information geometry (including MCMC approaches, e.g. Mannakkee, Ragsdale, Transtrum, Gutenkunst); higher dimensional sloppy models in neuroscience (O'Leary, Sutton, \& Marder 2015, Fisher, Olasagasti, et al., 2013); Compensatory parameter combinations through the implicit function theorem (Olypher and Calabrese, J. Neurophys. 2007). }
 
-Thank you for these references, we have incorporated some where appropriate.
+Thank you for these references. We have incorporated most of them where appropriate.
 
 \textbf{Additional data files and statistical comments:}
 
 \textbf{Code should be made available in well-documented form if it isn't already. }
+
+Please see the github repository for this manuscript, which includes code for the EPI method and the analyses that went into each figure.
 
 \end{document}
